# echo-chamber

./: .claudeignore  .editorconfig  .env.dev.example  .env.prod.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_SESSION.md  Launch Claude Code.bat  README.md  START_HERE.md  Start Echo Chamber (Silent).vbs  Start Echo Chamber Core (Silent).vbs  Start Echo Chamber Core Client.vbs  Start Echo Chamber.cmd  fix-audio.ps1  main.js  package-lock.json  package.json
.github/: pull_request_template.md
core/: AGENTS.md  Allow Echo Core Firewall.cmd  Cargo.toml  README.md  admin-query.ps1  allow-firewall.ps1  install-startup-task.ps1  nvcuvid.def  nvcuvid.exp  nvcuvid.lib  restart-control.ps1  restart-sfu.ps1  retry-sfu.ps1  run-core.ps1  startup.ps1  stop-core.ps1
core/admin/: admin.css  admin.js  index.html
core/admin-client/: Cargo.toml  tauri.conf.json
core/admin-client/capabilities/: default.json
core/admin-client/src/: audio_capture.rs  audio_capture_stub.rs  main.rs
core/client/: .gitignore  .tauri-keys.pub  AGENTS.md  Cargo.toml  Info.plist  README.md  build.rs  tauri.conf.json
core/client/capabilities/: default.json
core/client/src/: audio_capture.rs  audio_capture_stub.rs  audio_output.rs  audio_output_stub.rs  capture_health.rs  capture_pipeline.rs  control_block_client.rs  desktop_capture.rs  display_placement.rs  file_debug_log.rs  game_capture.rs  gpu_converter.rs  gpu_preference.rs  main.rs  native_presenter.rs  nvfbc_capture.rs  screen_capture.rs
core/client/src/archive/: AGENTS.md  README.md  injector.rs
core/client/src/archive/hook/src/: control_block.rs  lib.rs  present_hook.rs
core/control/: .env.example  AGENTS.md  Cargo.toml  README.md  generate-cert.ps1  get-token.ps1  run-control.ps1
core/control/src/: admin.rs  audio_capture.rs  auth.rs  chat.rs  config.rs  file_serving.rs  jam_bot.rs  jam_session.rs  main.rs  rooms.rs  sfu_proxy.rs  soundboard.rs
core/deploy/: agent.ps1  auto-deploy.ps1  build-release.ps1  config.json  deploy-watcher.config.json  deploy-watcher.ps1  install-deploy-watcher.ps1  latest.json  local-release-lib.ps1  publish-local-release.ps1  push-build.ps1  setup-agent.ps1  stop-all.ps1  sync-manifest.ps1  test-local-release-lib.ps1
core/docs/: ARCHITECTURE.md  AUDIO_PIPELINE.md  CAPTURE_PIPELINE.md  CLIENT.md  CLIENT_MODULES.md  CONTROL_MODULES.md  CONTROL_PLANE.md  DECISIONS.md  NETWORKING.md  ROADMAP.md  SDK_PATCHES.md  VIEWER_MODULES.md
core/hook/: AGENTS.md  Cargo.toml  README.md
core/hook/src/: format_convert.rs  shared_texture.rs
core/libwebrtc-local/: .cargo_vcs_info.json  Cargo.toml
core/libwebrtc-local/src/: rtp_parameters.rs
core/libwebrtc-local/src/native/: peer_connection_factory.rs  rtp_parameters.rs
core/livekit-local/: Cargo.toml
core/livekit-local/src/: lib.rs
core/livekit-local/src/room/: options.rs
core/livekit-local/src/rtc_engine/: lk_runtime.rs  peer_transport.rs  rtc_session.rs
core/scripts/: patch-nvfbc.ps1
core/sfu/: README.md  docker-compose.yml  livekit.docker.yaml.example  livekit.yaml.example  run-livekit.ps1  run-redis.ps1  start-livekit.ps1
core/turn/: go.mod  main.go  start-turn.ps1
core/viewer/: AGENTS.md  admin-panel.js  admin-panel.test.js  admin.js  app.js  audio-routing.js  auth.js  capture-picker.css  capture-picker.js  changelog.js  chat.js  chimes.js  chimes.test.js  connect.js  debug.js  debug.test.js  display-status.js  display-status.test.js  grid-layout.js  identity.js  index.html  jam-session-state.js  jam-session-state.test.js  jam.css  jam.js  media-controls.js  native-presenter.js  native-presenter.test.js  participants-avatar.js  participants-avatar.test.js  participants-fullscreen.js  participants-grid.js  participants.js  publish-state-reconcile.js  publish-state-reconcile.test.js  reliability-scenarios.test.js  rnnoise.js  room-status.js  room-switch-state.js  room-switch-state.test.js  (+16 more)
core/viewer-next/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
core/viewer-next/e2e/: smoke.spec.ts
core/viewer-next/public/legacy/: changelog.js  index.html  jam.js  style.css
core/viewer-next/scripts/: capture-legacy-before.mjs
core/viewer-next/src/: main.tsx  styles.css
core/viewer-next/src/app/: App.tsx
core/viewer-next/src/components/: StatusPill.tsx
core/viewer-next/src/features/connection/: ConnectionPanel.tsx  RoomsPanel.tsx  connectionMachine.ts  useOnlineUsersQuery.ts  useRoomStatusQuery.ts  useRoomsQuery.ts
core/viewer-next/src/features/health/: HealthPanel.tsx  useHealthQuery.ts
core/viewer-next/src/features/media/: aimdBitrateControl.ts  bweWatchdog.ts  cameraRecoveryParity.ts  deviceProfileParity.ts  legacyPreferenceMigration.ts  participantVolumeBoost.ts  rnnoiseParity.ts  screenShareParity.ts  sdpCodecHintParity.ts  soundboardParity.ts
core/viewer-next/src/lib/: api.ts  identity.ts
core/viewer-next/src/stores/: viewerPrefsStore.ts
core/viewer-next/tests/: app.reliability.test.tsx  app.test.tsx  connectionMachine.test.ts  media.aimdParity.test.ts  media.bweParity.test.ts  media.cameraRecoveryParity.test.ts  media.deviceProfileParity.test.ts  media.legacyPreferenceMigration.test.ts  media.rnnoiseParity.test.ts  media.screenShareParity.test.ts  media.sdpCodecHintParity.test.ts  media.soundboardParity.test.ts  media.volumeBoostParity.test.ts  viewerPrefsStore.test.ts
core/webrtc-sys-local/: .cargo_vcs_info.json  Cargo.toml  build.rs
core/webrtc-sys-local/include/livekit/: video_track.h
core/webrtc-sys-local/src/: peer_connection_factory.cpp  video_decoder_factory.cpp  video_encoder_factory.cpp  video_track.cpp
core/webrtc-sys-local/src/nvidia/: cuda_context.cpp  cuda_context.h  h264_encoder_impl.cpp  nvidia_encoder_factory.cpp
docs/: ARCHITECTURE.md  BACKUPS.md  CODEX.md  GITHUB.md  INDEX.md  OPERATIONS.md  RELEASE-BOUNDARIES.md  TERMINOLOGY.md  TESTING.md  VALIDATION.md  WORKFLOW.md
power-manager/: games.txt  run-setup.cmd  setup.ps1  switch-mode.ps1  (+2 more)
(+95 files in other folders)
