[package]
name = "echo-core-client"
version = "0.2.4"
edition = "2021"
description = "Echo Chamber native desktop client"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows-core = "0.58"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
