[package]
name = "echo-core-client"
version = "0.6.3"
edition = "2021"
description = "Echo Chamber native desktop client"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
base64 = "0.22"
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
livekit = { version = "0.7", features = ["native-tls"] }
windows-capture = "1.5"
windows-core = "0.58"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Storage_Xps",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D_Fxc",
]
