[package]
name = "echo-core-control"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
argon2 = "0.5"
rand = "0.8"
tower-http = { version = "0.5", features = ["fs", "cors"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
rcgen = { version = "0.13", features = ["pem"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
